<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_editor_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/form_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:clipToPadding="false"
        android:paddingBottom="104dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Actual staging area for the contents-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Recipe name input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name_hint"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:helperTextEnabled="true"
                app:helperText=" ">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Recipe description input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_description_hint"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_input_layout"
                app:helperTextEnabled="true"
                app:helperText=" ">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- Ingredients Title -->
            <TextView
                android:id="@+id/ingredients_title_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_title"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_input_layout">

            </TextView>

            <!-- Recipe Ingredient RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipeIngredient_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/ingredients_title_text_view"
                android:nestedScrollingEnabled="false"/>

            <!-- Add RecipeIngredient button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_ingredient_button"
                style="?attr/materialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/add_ingredient_button"
                android:contentDescription="@string/add_ingredient_content_description"
                app:layout_constraintTop_toBottomOf="@id/recipeIngredient_recycler_view"/>

            <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
            <!-- Instructions Title -->
            <TextView
                android:id="@+id/instructions_title_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instructions_title"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_ingredient_button">

            </TextView>

            <!-- Recipe Ingredient RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recipeInstruction_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/instructions_title_text_view"
                android:nestedScrollingEnabled="false"/>

            <!-- Add Instruction button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_instruction_button"
                style="?attr/materialButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/add_instruction_button"
                android:contentDescription="@string/add_instruction_content_description"
                app:layout_constraintTop_toBottomOf="@id/recipeInstruction_recycler_view"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/save_24"
        app:tint="@color/black"
        android:layout_margin="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>